Finishing add api login & register

--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
   },
   "homepage": "https://github.com/frhan18/belajar-express-js#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "date-fns": "^2.29.3",
     "express": "^4.18.2",
-    "nodemon": "^2.0.21",
+    "nanoid": "^3.0.0",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.21"
   }
 }
